--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ standard:
   contact: Contacts
 
 related_sites: 
+  'h-CNV @ ELIXIR': 'https://elixir-europe.org/about-us/implementation-studies/2019-hcnv'
   'Beacon @ ELIXIR': 'http://www.elixir-europe.org/about-us/implementation-studies/beacons'
   'SchemaBlocks': 'http://schemablocks.org'
 
