--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,9 @@ related_sites:
   'SchemaBlocks': 'http://schemablocks.org'
 
 github_projects:
+  'h-CNV': 'http://github.com/hcnv/'
   'SchemaBlocks': 'http://github.com/ga4gh-schemablocks/'
-  'ELIXIR Beacon': 'http://github.com/beacon-project/'
+  'ELIXIR Beacon': 'http://github.com/ga4gh-beacon/'
 
 # The categories_year_sorted parameter determines the selection of a 
 # time sorted, year labeled listing template for those categories.
