--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ nav_cat_blocks:     # comma-separated "label,type,label_visibility"
 standard: 
   general: 'About...'
   news: 'News & Press'
-  events: Events
+  events: 'Events & Presentations'
   people: Participants
   howto: 'Examples, Guides & FAQ'
   minutes: 'Meeting minutes'
@@ -81,6 +81,8 @@ cloud_tags:
   - contacts
   - contributors
   - developers
+  - presentation
+  - slides
   - documentation
   - FAQ
   - press
