--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 label: 'hCNV Community'
 tagline: 'Genomic Copy Number Variations in Humans'
 description: |
-  This is the website for the h-CNV community, originating in a project supported through ELIXIR's data communities initiative 
+  This is the website for the h-CNV community, originating in a project supported through ELIXIR's data communities initiative
 keywords: CNV, genomics, genome variants, genome sequencing, genomic arrays
 site_domain_name: hcnv.github.io
 url: 'https://hcnv.github.io'
 
-# The baseurl parameter is an empty string if the site is represented at the root 
+# The baseurl parameter is an empty string if the site is represented at the root
 # of a domain. For project domains on Github it corresponds to the project name.
 baseurl: ""
 
@@ -19,11 +19,14 @@ include:        # usually only pages in / and /_posts are "seen" => processed
   - categories  # contains landing pages for each category
   - tags        # contains landing pages for each tag
 
-# Collections are used to organise pages into logical groups; these do not need 
+# Collections are used to organise pages into logical groups; these do not need
 # to have a relation to the "categories", though this is highly recommended
 # Collection directories reside in "/collections_dir/_(collection name)".
 # The "_posts" collection is created by default.
 collections:
+  doc:
+    output: true
+    permalink: /doc/:path/
   general:
     output: true
     permalink: /general/:path/
@@ -37,8 +40,8 @@ collections:
     output: true
     permalink: /minutes/:path/
 collections_dir: pages  # optional; here, all collections are inside "/pages"
-    
-# navigation blocks can be used to separate different categories and add e.g. 
+
+# navigation blocks can be used to separate different categories and add e.g.
 # external link block(s), in combination with a properly modified layout
 nav_cat_blocks:     # comma-separated "label,type,label_visibility"
   standard: 'General,categories,hide'
@@ -46,7 +49,7 @@ nav_cat_blocks:     # comma-separated "label,type,label_visibility"
   github_projects: 'Github Projects,github_projects,show'
 
 # content of the different navigation blocks
-standard: 
+standard:
   general: 'About...'
   news: 'News & Press'
   events: 'Events & Presentations'
@@ -55,7 +58,7 @@ standard:
   minutes: 'Meeting minutes'
   contact: Contacts
 
-related_sites: 
+related_sites:
   'h-CNV @ ELIXIR': 'https://elixir-europe.org/about-us/implementation-studies/2019-hcnv'
   'Beacon @ ELIXIR': 'http://www.elixir-europe.org/about-us/implementation-studies/beacons'
   'SchemaBlocks': 'http://schemablocks.org'
@@ -65,14 +68,14 @@ github_projects:
   'SchemaBlocks': 'http://github.com/ga4gh-schemablocks/'
   'ELIXIR Beacon': 'http://github.com/ga4gh-beacon/'
 
-# The categories_year_sorted parameter determines the selection of a 
+# The categories-date-sorted parameter determines the selection of a
 # time sorted, year labeled listing template for those categories.
-categories_year_sorted:
+categories-date-sorted:
   - news
   - minutes
   - events
 
-tags_year_sorted:
+tags-date-sorted:
   - press
 
 # Only tags listed here are represented in the tag cloud.
