--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,7 @@ standard:
   news: 'News & Events'
   people: Participants
   howto: 'Examples, Guides & FAQ'
+  standards: 'Standards and Guidelines'
   resources: 'Resources & Databases'
   minutes: 'Meeting minutes'
   contact: Contacts
