--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ standard:
 
 related_sites:
   'h-CNV @ ELIXIR': 'https://elixir-europe.org/about-us/implementation-studies/2019-hcnv'
+  'Beacon Project': 'https://beacon-project.io'  
   'Beacon @ ELIXIR': 'http://www.elixir-europe.org/about-us/implementation-studies/beacons'
   'SchemaBlocks': 'http://schemablocks.org'
 
