--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ standard:
 
 related_sites:
   'h-CNV @ ELIXIR': 'https://elixir-europe.org/about-us/implementation-studies/2019-hcnv'
-  'Beacon Project': 'https://beacon-project.io'  
+  'Beacon Project': 'https://beacon-project.io'
   'Beacon @ ELIXIR': 'http://www.elixir-europe.org/about-us/implementation-studies/beacons'
   'SchemaBlocks': 'http://schemablocks.org'
 
@@ -93,6 +93,7 @@ cloud_tags:
   - hackathon
   - FAQ
   - press
+  - publication
   - website
 
 # additional Jekyll instructions
