--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ categories-date-sorted:
 
 tags-date-sorted:
   - press
+  - presentation
 
 # Only tags listed here are represented in the tag cloud.
 cloud_tags:
