--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,8 @@ standard:
   news: 'News & Events'
   people: Participants
   standards: 'Standards and Guidelines'
-  resources: 'Resources & Databases'
+  resources: 'Studies & Resources'
   howto: 'Examples, Guides & FAQ'
-  minutes: 'Meeting minutes'
   contact: Contacts
 
 related_sites:
@@ -71,7 +70,6 @@ github_projects:
 # time sorted, year labeled listing template for those categories.
 categories-date-sorted:
   - news
-  - minutes
   - events
 
 tags-date-sorted:
@@ -87,9 +85,10 @@ cloud_tags:
   - databases
   - documentation
   - developers
+  - IS_2021-Data
+  - IS_2021_Exchange
   - presentation
   - schemas
-  - slides
   - standards
   - hackathon
   - FAQ
