adding news tag to study pages
tag fixes

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ cloud_tags:
   - databases
   - documentation
   - developers
-  - IS_2021-Data
+  - IS_2021_Data
   - IS_2021_Exchange
   - presentation
   - schemas
