CNV ontology proposal
... also adjusting the hCNV-X tag

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ cloud_tags:
   - documentation
   - developers
   - IS_2021_Data
-  - IS_2021_Exchange
+  - IS_2021_hCNV-X
   - presentation
   - schemas
   - standards
