--- a/_config.yaml
+++ b/_config.yaml
@@ -56,7 +56,7 @@ standard:
   contact: Contacts
 
 related_sites:
-  'Genome Blog': "https://hcnv.github.io/genome-blog/"
+  'Genome Blog': "https://genome.blog"
   'h-CNV @ ELIXIR': 'https://elixir-europe.org/about-us/implementation-studies/2019-hcnv'
   'Beacon Project': 'https://beacon-project.io'
   'Beacon @ ELIXIR': 'http://www.elixir-europe.org/about-us/implementation-studies/beacons'
