--- a/.github/workflows/mk-docs.yaml
+++ b/.github/workflows/mk-docs.yaml
@@ -1,4 +1,4 @@
-name: mk-progenetix-docs 
+name: mk-docs 
 on:
   push:
     branches:
@@ -14,7 +14,6 @@ jobs:
       - run: pip install mkdocs-material 
       - run: pip install mkdocs-macros-plugin
       - run: pip install pymdown-extensions
-      - run: pip install mkdocs-mermaid2-plugin
       - run: pip install mdx_gh_links
       - run: pip install mkdocs-with-pdf
       - run: mkdocs gh-deploy --force
