--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -76,13 +76,10 @@ theme:
     - navigation.tracking
     - navigation.sections
     - toc.integrate
-  custom_dir: mkdocs_overrides
+  custom_dir: extras
       
 plugins:
     - search
-    # - with-pdf:
-    #     author: Progenetix
-    #     output_path: pdf/progenetix-documentation.pdf
     - macros
     # - mermaid2
 
@@ -106,8 +103,6 @@ extra:
     extended_preview: true
     excerpt_separator: <!--more-->
   social:
-    # - icon: fontawesome/brands/twitter 
-    #   link: https://twitter.com/progenetix
     - icon: fontawesome/brands/github 
       link: https://github.com/hCNV
 extra_css:
