--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -15,6 +15,7 @@ nav:
   - h-CNV Projects: implementation-studies
   - CNV Annotation Standards: resources/CNV-annotation-standards
   - Databases & Resources: resources
+  - CNV References Project: /cnv-reference-resources/
   - Genome Blog: "http://genome.blog"
   - Contacts: contacts
   - h-CNV @ ELIXIR: 'https://elixir-europe.org/about-us/implementation-studies/2019-hcnv'
